# config

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .obsidian.vimrc  .walkthrough.json  AGENTS.md  default  helix.conf  nginx  nginx-setup.txt  plan  rulesync.jsonc  subagent-support.md  terminal-tests.txt  tmux-apt.conf  tmux.conf  webpack.config.js  windows-terminal.json
.copilot/: config.json
.rulesync/: mcp.json
nvim/rust/diff-review-harness/: Cargo.toml
nvim/rust/diff-review-harness/src/: lib.rs  main.rs
nvim/rust/diff-review-harness/src/agent/: mod.rs
nvim/rust/diff-review-harness/src/backend/: approval.rs  catalog.rs  json_rpc.rs  mod.rs  steering.rs
nvim/rust/diff-review-harness/src/broker/: fork.rs  mod.rs  new_session.rs
nvim/rust/diff-review-harness/src/checkpoint/: mod.rs
nvim/rust/diff-review-harness/src/control_tools/: mod.rs
nvim/rust/diff-review-harness/src/goal/: mod.rs
nvim/rust/diff-review-harness/src/interaction/: change.rs  mod.rs  node.rs  task.rs  timeline.rs
nvim/rust/diff-review-harness/src/permissions/: command.rs  document.rs  matcher.rs  mod.rs  store.rs
nvim/rust/diff-review-harness/src/plan/: audit.rs  deviation.rs  document.rs  edit.rs  mod.rs  prompt.rs  render.rs  resolution.rs  scheduler.rs
nvim/rust/diff-review-harness/src/protocol/: mod.rs
nvim/rust/diff-review-harness/src/session/: mod.rs
nvim/rust/diff-review-harness/src/storage/: mod.rs
nvim/rust/diff-review-harness/src/timeline/: mod.rs
nvim/rust/diff-review-harness/tests/: broker_stdio.rs  codex_cli.rs  codex_real.rs  copilot_acp.rs  copilot_real.rs  permission_document.rs
(+564 files in other folders)
