[package]
name = "diff-review-harness"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
agent-client-protocol = { version = "1.2.0", features = ["unstable_session_fork"] }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "3.1.1"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.48", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23"
